# manipurator_ws

./: .gitignore
UI/: bolt_publisher.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
src/camera2_ros/: package.xml  setup.cfg  setup.py
src/camera2_ros/camera2_ros/: CameraPublisher.py  arduino_comunication.py  box_dectection_pick.py  box_dectection_place.py  camera2_ros.py  lane_detection.py  pub_yolo.py  sub_yolo.py  sub_yolo_place.py  web_node.py
src/camera2_ros/launch/: sub_yolo.launch.py
src/car_urdf/: CMakeLists.txt
src/car_urdf/launch/: display.launch.py
src/car_urdf/meshes/: back_left_wheel.STL  back_right_wheel.STL  base_link.STL  front_left_wheel.STL  front_right_wheel.STL  turn_left_wheel.STL  turn_right_wheel.STL
src/car_urdf/urdf/: car_urdf.urdf
src/config1/: .setup_assistant  CMakeLists.txt
src/config1/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  urdf1.ros2_control.xacro  urdf1.srdf  urdf1.urdf.xacro
src/config1/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  mtc.rviz  mtc_demo.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/interface_manipurator/: CMakeLists.txt
src/mtc_config1/: CMakeLists.txt  package.xml
src/mtc_config1/launch/: mtc.rviz  mtc_config1.launch.py  mtc_demo.launch.py  mtc_pick.launch.py  mtc_place.launch.py  mtc_ready_to_go.launch.py  place_mtc.launch.py  server.launch.py  start_mtc.launch.py
src/mtc_config1/src/: moveit_controller.cpp  mtc_node.cpp  mtc_node_test.cpp  mtc_place.cpp  mtc_pub.cpp  mtc_ready_to_go.cpp  place_node.cpp  place_pub.cpp  start_mtc.cpp
src/robot_manipurator/: package.xml  setup.cfg  setup.py
src/robot_manipurator/robot_manipurator/: listener1.py  pick_place_controller.py  plot.py  real_robot.py  subscriber.py  web_test1.py
src/server_controllers/: package.xml  setup.cfg  setup.py
src/server_controllers/server_controllers/: node1.py
src/urdf1/: CMakeLists.txt
src/urdf1/urdf/: urdf1.urdf
src/yolov8_obb_msgs/: package.xml
trained_model/: model.h5
(+273 files in other folders)
